# boardservice/src/main/java/com/workingbit/board/api/impl/BoardApiImpl.java
@@ -4,6 +4,7 @@ import com.workingbit.board.api.BoardApi;
 import com.workingbit.board.exception.BoardServiceError;
 import com.workingbit.board.exception.BoardServiceException;
 import com.workingbit.board.service.BoardService;
+import com.workingbit.board.service.BoardUtils;
 import com.workingbit.share.domain.impl.BoardContainer;
 import com.workingbit.share.domain.impl.Square;
 import com.workingbit.share.model.CreateBoardRequest;
@@ -14,6 +15,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Objects;
 import java.util.Optional;
 
 /**
@@ -32,14 +34,17 @@ public class BoardApiImpl implements BoardApi {
   @Override
   public ResponseEntity<BoardContainer> createBoard(@RequestBody CreateBoardRequest createBoardRequest) {
     BoardContainer board = boardService.createBoard(createBoardRequest);
-    return new ResponseEntity<>(board, HttpStatus.OK);
+    return new ResponseEntity<>(board, HttpStatus.CREATED);
   }
 
   @Override
   public ResponseEntity<BoardContainer> findBoardById(@PathVariable String boardId) {
     Optional<BoardContainer> boardContainerOptional = boardService.findById(boardId);
     if (boardContainerOptional.isPresent()) {
-      return new ResponseEntity<>(boardContainerOptional.get(), HttpStatus.OK);
+      try {
+        return new ResponseEntity<>(BoardUtils.addDraught(boardContainerOptional.get(), "d4", false, true), HttpStatus.OK);
+      } catch (BoardServiceException ignore) {
+      }
     }
     throw new BoardServiceError("Board not found");
   }
@@ -47,13 +52,19 @@ public class BoardApiImpl implements BoardApi {
   @Override
   public ResponseEntity<Void> deleteBoardById(@PathVariable String boardId) {
     boardService.delete(boardId);
-    return new ResponseEntity<>(HttpStatus.OK);
+    return new ResponseEntity<>(HttpStatus.NO_CONTENT);
   }
 
   @Override
-  public ResponseEntity<BoardContainer> highlightSquare(@PathVariable String boardId, @RequestBody Square toHighlight) {
+  public ResponseEntity<BoardContainer> highlightBoard(@PathVariable String boardId, @RequestBody Square toHighlight) {
     try {
       BoardContainer highlighted = boardService.highlight(boardId, toHighlight);
+      highlighted.getSquares()
+          .stream()
+          .filter(Objects::nonNull)
+          .filter(Square::isHighlighted)
+          .forEach(System.out::println);
+
       return new ResponseEntity<>(highlighted, HttpStatus.OK);
     } catch (BoardServiceException e) {
       return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
